Nova Identidade do Login

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - Matrix (peas)",
+    "name": "Discord like app (hyagohoudini)",
     "theme": {
       "colors": {
         "primary": {
