--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@skynexui/components": "^1.23.2",
+    "@supabase/supabase-js": "^1.29.4",
     "axios": "^0.25.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.2.0"
   },
   "scripts": {
