--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@skynexui/components": "^1.23.2",
     "@supabase/supabase-js": "^1.29.4",
     "axios": "^0.25.0",
+    "dotenv": "^14.3.2",
+    "firebase": "^9.6.5",
+    "framer-motion": "^5",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.2.0"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "refresh": "rm -rf node_modules package-lock.json && npm install"
   }
 }
